admin component - handling description overflow + small fix for profile component scrolling

--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -145,7 +145,7 @@ section{
 .users{
     width: 85%;
     padding-left: 35px;
-    overflow: overlay;
+    overflow: auto;
     min-height: 65%;
 }
 .info-container{
