--- a/src/app/discover/discover.component.css
+++ b/src/app/discover/discover.component.css
@@ -79,7 +79,7 @@ h1{
 .extensions{
     width: 85%;
     padding-left: 35px;
-    overflow: overlay;
+    overflow: auto;
     min-height: 65%;
 }
 .info-container{
