--- a/src/app/pendings/pendings.component.css
+++ b/src/app/pendings/pendings.component.css
@@ -52,7 +52,7 @@ h1{
     width: 85%;
     padding-top: 10px;
     padding-left: 35px;
-    overflow: overlay;
+    overflow: auto;
     min-height: 82%;
 }
 .info-container{
